--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ body {
         <div class="controls">
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="Search products by name, description, or category..." id="searchInput">
-                <button class="refresh-btn" onclick="refreshData()">🔄 Refresh Data</button>
+                <button class="refresh-btn" onclick="refreshData()"> Refresh Data</button>
             </div>
             
             <div class="filter-container">
